MAJ preseed.cfg

--- a/preseed.cfg
+++ b/preseed.cfg
@@ -1,5 +1,5 @@
 ################################################
-## preseed.cfg pour Linux DEBIAN 8 pour Jessie ##
+## preseed.cfg pour Linux DEBIAN 8 for Jessie ##
 ################################################
 # Locales
 ###debconf debconf/language string fr
@@ -8,7 +8,7 @@ d-i debian-installer/locale select fr_FR.UTF-8
 d-i debian-installer/locale string fr_FR.UTF-8
 d-i debian-installer/allow_unauthenticated boolean true
 
-# Configurer (La langue et pays).
+# Preeiconfigurer la locale seule definit la langue, le pays et la locale.
 d-i debian-installer/language string fr
 d-i debian-installer/country string FR
 d-i console-setup/ask_detect boolean false
@@ -48,7 +48,7 @@ d-i netcfg/choose_interface select auto
 ##d-i netcfg/dhcp_options select Configure network manually
 ##d-i netcfg/disable_dhcp boolean false
 ##d-i netcfg/link_wait_timeout string 30
-#d-i netcfg/get_nameservers string 8.8.8.8 et 8.8.4.4
+#d-i netcfg/get_nameservers string 164.81.1.5 164.81.1.4
 
 # Disable network configuration entirely. This is useful for cdrom
 # installations on non-networked devices where the network questions,
@@ -88,10 +88,6 @@ d-i partman-partitioning/confirm_write_new_label boolean true
 d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
-
-# Password
-### Générer un  Mot de passe md5 pour le Preseed.cfg
-### printf my_password | mkpasswd -s -m md5
 
 # User Root
 d-i passwd/root-login boolean true
@@ -136,27 +132,31 @@ d-i apt-setup/local3/comment string Debian 8 "jessie-backports"
 d-i apt-setup/local3/repository string http://ftp.fr.debian.org/debian/ jessie-backports main contrib non-free
 
 # Google
-### https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+## https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+apt-key adv --keyserver keyserver.ubuntu.com --recv-keys A040830F7FAC5991
 d-i apt-setup/local4/comment string Google Chrome
 d-i apt-setup/local4/repository string http://dl.google.com/linux/chrome/deb/ stable main
-apt-key adv --keyserver keyserver.ubuntu.com --recv-keys A040830F7FAC5991
-### Erreur d'importation de la KEY ### d-i apt-setup/local4/key string http://dl.google.com/linux/linux_signing_key.pub
+#d-i apt-setup/local4/key string http://dl.google.com/linux/linux_signing_key.pub
+
 
 # Grub
+# Auto install grub if this is the only one system.
 d-i grub-installer/only_debian boolean true
 # Due notably to potential USB sticks, the location of the MBR can not be
 # determined safely in general, so this needs to be specified:
 d-i grub-installer/bootdev string /dev/sda
 
 #Standard minimal system
-### Installation de Minimal ### tasksel tasksel/first multiselect standard
-### Installation de LXDE ### tasksel tasksel/desktop multiselect lxde-desktop
+#tasksel tasksel/first multiselect standard
+#tasksel tasksel/desktop multiselect lxde-desktop
 ### Installation de GNOME ### tasksel tasksel/first multiselect desktop
-### Installation de KDE ###
 tasksel tasksel/first multiselect standard, kde-desktop
+#tasksel tasksel/first multiselect standard
 
 # Paquets supplentaire
 d-i pkgsel/include string openssh-server build-essential kde-l10n-fr wget udpcast ethtool numlockx firmware-realtek ntp rdesktop vim flashplugin-nonfree gedit lshw cifs-utils google-chrome-stable virtualbox-5.0 git
+#d-i pkgsel/include string openssh-server build-essential wget numlockx firmware-realtek ntp rdesktop vim flashplugin-nonfree
+#d-i pkgsel/include string openssh-server build-essential
 
 # Faut-il analyser un autre CD ou DVD ?
 d-i apt-setup/cdrom/set-first boolean false
@@ -167,4 +167,5 @@ d-i finish-install/reboot_in_progress note
 #script
 d-i preseed/late_command string \
   sed -i '/^deb cdrom:/s/^/#/' /target/etc/apt/sources.list; \
-  in-target apt-key adv --recv-keys --keyserver keyserver.ubuntu.com A040830F7FAC5991;
+  in-target apt-key adv --recv-keys --keyserver keyserver.ubuntu.com A040830F7FAC5991; \
+  in-target git clone https://github.com/stefviv/Jessie;
