MAJ preseed.cdf

--- a/preseed.cfg
+++ b/preseed.cfg
@@ -89,14 +89,16 @@ d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
 
-# User Root
+### Users ###
+### User Root
 d-i passwd/root-login boolean true
 d-i passwd/root-password-crypted password $1$YdTFLMFA$16XSxzXFsMQln8DofEWzy0
-
-# User tech
+### User tech
 d-i passwd/user-fullname string tech
 d-i passwd/username string tech
 d-i passwd/user-password-crypted password $1$YdTFLMFA$16XSxzXFsMQln8DofEWzy0
+### Password
+### printf my_password | mkpasswd -s -m md5
 
 ### Mirror settings
 d-i mirror/country string FR
@@ -147,16 +149,13 @@ d-i grub-installer/only_debian boolean true
 d-i grub-installer/bootdev string /dev/sda
 
 #Standard minimal system
-#tasksel tasksel/first multiselect standard
-#tasksel tasksel/desktop multiselect lxde-desktop
-### Installation de GNOME ### tasksel tasksel/first multiselect desktop
 tasksel tasksel/first multiselect standard, kde-desktop
-#tasksel tasksel/first multiselect standard
+### Installation de LXDE ### tasksel tasksel/desktop multiselect lxde-desktop
+### Installation de GNOME ### tasksel tasksel/first multiselect desktop
+### Installation Minimal ### tasksel tasksel/first multiselect standard
 
 # Paquets supplentaire
 d-i pkgsel/include string openssh-server build-essential kde-l10n-fr wget udpcast ethtool numlockx firmware-realtek ntp rdesktop vim flashplugin-nonfree gedit lshw cifs-utils google-chrome-stable virtualbox-5.0 git
-#d-i pkgsel/include string openssh-server build-essential wget numlockx firmware-realtek ntp rdesktop vim flashplugin-nonfree
-#d-i pkgsel/include string openssh-server build-essential
 
 # Faut-il analyser un autre CD ou DVD ?
 d-i apt-setup/cdrom/set-first boolean false
