--- a/xorg_vm_1440_900.conf
+++ b/xorg_vm_1440_900.conf
@@ -1,5 +1,5 @@
 Section "ServerLayout"
-	Identifier     "BodhiZazen's KVM xorg.conf"
+	Identifier     "KVM xorg.conf"
 	Screen      0  "Screen0" 0 0
 	InputDevice    "Mouse0" "CorePointer"
 	InputDevice    "Keyboard0" "CoreKeyboard"
